<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MagicEightBall" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter text here to copy" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="crV-k0-dAj">
                                <rect key="frame" x="103.5" y="64" width="168" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="myTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nHJ-G5-ap0">
                                <rect key="frame" x="149" y="156" width="77.5" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="myLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89z-hw-TVo">
                                <rect key="frame" x="154" y="110" width="66" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="myButton"/>
                                <state key="normal" title="Copy me!"/>
                                <connections>
                                    <action selector="didPressMyButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fY5-zM-4O1"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="nHJ-G5-ap0" firstAttribute="top" secondItem="89z-hw-TVo" secondAttribute="bottom" constant="16" id="26s-JC-Rxv"/>
                            <constraint firstItem="crV-k0-dAj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="2V0-rf-q1f"/>
                            <constraint firstItem="89z-hw-TVo" firstAttribute="top" secondItem="crV-k0-dAj" secondAttribute="bottom" constant="16" id="2ie-86-mwV"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="crV-k0-dAj" secondAttribute="trailing" constant="16" id="CdN-Ec-K6u"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nHJ-G5-ap0" secondAttribute="bottom" constant="16" id="D7g-R6-LPA"/>
                            <constraint firstItem="nHJ-G5-ap0" firstAttribute="centerX" secondItem="89z-hw-TVo" secondAttribute="centerX" id="DRK-01-RRX"/>
                            <constraint firstItem="crV-k0-dAj" firstAttribute="centerX" secondItem="89z-hw-TVo" secondAttribute="centerX" id="Fa8-fh-Lcm"/>
                            <constraint firstItem="89z-hw-TVo" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Oa4-Sb-HvO"/>
                            <constraint firstItem="nHJ-G5-ap0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Sra-b7-KNJ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nHJ-G5-ap0" secondAttribute="trailing" constant="16" id="Tsx-fd-Bh8"/>
                            <constraint firstItem="crV-k0-dAj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="nkB-TS-G72"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="myLabel" destination="nHJ-G5-ap0" id="4cZ-t7-yXw"/>
                        <outlet property="myTextField" destination="crV-k0-dAj" id="fVh-fx-rCU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
